--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -140,10 +140,19 @@ https://templatemo.com/tm-521-get-ready
     position: absolute;
     top: 12px;
     right: 12px;
-    color: #d2b48c;
+    color: #100e0b;
     font-size: 100px;
   }
 
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 10px 25px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
 
   /*---------------------------------------
